@@ -59,6 +59,7 @@ Fixed bugs
 - Fixed problem with incompatibility of symmetry handling in Benders decomposition
 - Fixed parsing of small number in CIP format of nonlinear constraint
 - Fixed problem in upgrading full orbitopes to partitioning orbitopes
+- Fixed potential indexing error in prop_vbounds.c
 
 Miscellaneous
 -------------
